updated CSS info

--- a/about.html
+++ b/about.html
@@ -3,54 +3,85 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>About the Garden club</title>
+  <style>
+  h1 {
+      text-align: center;
+      font-size: 32px;
+  }
+  </style> 
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
   <header>
     <nav>
       <ul>
-        <li>
-          <a href="index.html">Home Page</a>
-        </li>
+          <li>
+            <a href="index.html">Home Page</a>
+          </li>
 
-        <li>
-          <a href="about.html">About</a>
-        </li>
-          <a href="Tips & Tricks.html">Tips & Tricks</a>
-        <li>
-          <a href="Top 10 plants for the garden.html">Top 10 plants for the garden</a>
-        </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="tools.html">Tools</a>
+          </li>
+          <li>
+            <a href="seeds.html">Seeds</a>
+          </li>  
+          <li>
+          <a href="Tips_Tricks.html">Tips & Tricks</a>
+          </li>
+          <li>
+          <a href="Top_10_plants.html">Top 10 plants for the garden</a>
+           </li>
       </ul>
     </nav>
   </header>
-  <!-- Instead of section and article, many developers use the div tag. -->
+ 
   <section>
     <h1>About Us</h1>
     <img src="garden club pic.png">
-    <article>
-      <h2></h2>
+      <p>Welcome to the graden club! Here at the graden club we have everything you need to know about gardens, from tips and tricks to tutorials on how to keep those gradens looking great. We just opened up recently and we wanted to show the people what gardening is all about!</p>
 
-      <p>Welcome to the graden club! Here at the graden club we have everything you need to know about gardens, from tips and tricks to tutorials on how to keep those gradens looking great. We just opened up recently and we wanted to show the people what gardening is all about!
+      <p>Here are some of the Gardens we have:</p>
 
-      <p> Here are some of the Gardens we have:
+<article text align="center">
+  <img src="spectacular garden.jpg">
 
-      <img src="spectacular garden.jpg">
+  <img src="OIP.jpg">   
 
-
-
-   <img src="OIP.jpg">   
-
-
-   <img src="garden2.jpg">
-
-   <p> These gardens are beautiful and we can help turn your not so good garden into these garden. On our page we have tips and tricks and a list of tools to use.
-
-    
+  <img src="garden2.jpg">
+<!-- added linked text with in this paragraph-->
+   <p>These gardens are beautiful and we can help turn your not so good garden into these garden. On our page we have <a href="Tips_Tricks.html">Tips & Tricks</a> and a list of <a href="tools.html">Tools</a> to use.
+    <!-- added all contact information-->
+  <h3>Contact Information</h3>
+<table>
+  <thead>
+    <tr>
+      <th><em><b>Form</b></em></th>
+      <th><em><b>contact information</b></em></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><b>Phone</b></td>
+     <td>1-(800)-928-0380</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td><b>Email</b></td>
+      <td>Simpson.Garden@simpson.edu</td> 
+    </tr>
+  </tfoot>
+</table>
+<article>
   </section>
   <footer>
-      Copyright 2020 by Domnick Miyeng
+<!-- added copyright sign to all pages-->
+          <p>&copy;2020 by Domnick Miyeng</p>
   </footer>
 </body>
 </html>
