--- a/tools.html
+++ b/tools.html
@@ -1,10 +1,10 @@
-<!--Caroline Oberg-->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<title>Gardening Tools</title>
+   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
@@ -12,20 +12,25 @@
 		<!-- Nav section -->
       <nav>
         <ul>
-          <li>
+              <li>
             <a href="index.html">Home Page</a>
           </li>
 
           <li>
             <a href="about.html">About</a>
           </li>
-
           <li>
             <a href="tools.html">Tools</a>
           </li>
           <li>
             <a href="seeds.html">Seeds</a>
-          </li>          
+          </li>  
+          <li>
+          <a href="Tips_Tricks.html">Tips & Tricks</a>
+          </li>
+          <li>
+          <a href="Top_10_plants.html">Top 10 plants for the garden</a>
+           </li> 
         </ul>
       </nav>
 		<h1>Simpson Garden Center</h1>
@@ -33,10 +38,11 @@
 	<h1>Tools</h1>
 
 	<p>Welcome to the tools page, here you will find everything we know about tools.</p>
-	<p>Currently we have shovels, gardening gloves, and rakes. We also carry larger electrical tools such as lawn mowers, chainsaws, and leaf blowers. Call our store for more information as to what is in stock. </p>
+	<p>Currently we have shovels, gardening gloves, and rakes. We also carry larger electrical tools such as lawn mowers, chainsaws, and leaf blowers.
+    <P>Call our store for more information as to what is in stock. </p>
 <img src="gardentools.png">
 <footer>
-	Copyright 2020 by Caroline Oberg
+<p>&copy;2020 by Domnick Miyeng</p>
 </footer>
 </body>
 </html>
