--- a/top_10_plants.html
+++ b/top_10_plants.html
@@ -1,135 +1,76 @@
 <!DOCTYPE html>
-
+<!-- most tags were left open so I went throught and eddited them all-->
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>Top 10 Plants for the Graden</title>
+  <title>Top 10 Plants for the Graden</title>    
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
-
 <body>
   <header>
     <nav>
       <ul>
-        <li>
-          <a href="index.html">Home Page</a>
-        </li>
+            <li>
+            <a href="index.html">Home Page</a>
+          </li>
 
-        <li>
-          <a href="about.html">About</a>
-        </li>
-
-        <li>
-          <a href="Tips & Tricks.html">Tips & Tricks</a>
-        </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="tools.html">Tools</a>
+          </li>
+          <li>
+            <a href="seeds.html">Seeds</a>
+          </li>  
+          <li>
+          <a href="Tips_Tricks.html">Tips & Tricks</a>
+          </li>
+          <li>
+          <a href="Top_10_plants.html">Top 10 plants for the garden</a>
+           </li>
       </ul>
     </nav>
   </header>
-  <!-- Instead of section and article, many developers use the div tag. -->
+<!--did not add anything, but had to do a lot of editing-->
   <section>
-    <h1><B> Hey welcome to our Top 10 plants for your garden!</h1>
+    <h1><b> Hey welcome to our Top 10 plants for your garden!</b></h1>
 
-    <footer> Number 1: Tomato
-      <p> These juicy plants are easy to grow.
+    <h3> Number 1: Tomato</h3>
+      <p> These juicy plants are easy to grow and taste delicious!</p>
         <img src="tomato2.png">
 
-
-
-
-
-
-
-
-      <footer> Number 2: Bell pepper 
-      <p> These plants are very popular to all the gardeners. Who doesn't like growing vegetables at home.
+      <h4> Number 2: Bell pepper</h4> 
+      <p> These plants are very popular to all the gardeners. Who doesn't like growing vegetables at home.</p>
         <img src="bell pepper.png">
 
-
-
-
-
-
-
-  <footer> Number 3:Roses 
-    <p> Yes i said it roses, these beautiful flowers just look so good in the garden. Now you can give flowers to love ones for free!
-
-
-
+  <h3> Number 3:Roses</h3>
+    <p> Yes i said it roses, these beautiful flowers just look so good in the garden. Now you can give flowers to love ones for free!</p>
     <img src="roses.png">
 
-<footer> Number 4: Lily flowers
-  <p> Just like the rose these lily are also good looking in the garden. 
-
-
-
+<h3> Number 4: Lily flowers</h3>
+  <p> Just like the rose these lily are also good looking in the garden.</p>
     <img src="lilly.png">
-
-
-
-
-<footer> Number 5: Basil 
-  <p> i personally grow basil in my own garden and these are so good.
+<h3> Number 5: Basil</h3>
+  <p> I personally grow basil in my own garden and these are so good.</p>
     <img src="basil.png">
-
-
-
-
-<footer> Number 6: Cucumbers 
-
-
-
-
-            <img src="cucumber.png">'
-
-
-
-
-
-<footer> Number 7: Tulips
-
-
-
-
-
-
-
+<h3> Number 6: Cucumbers</h3>
+           <p> <img src="cucumber.png"></p>
+<h3> Number 7: Tulips</h3>
   <img src="tulip.png">
-
-
-
-
-
-
-<footer> Number 8: Carnation
-
-
-
+<h3> Number 8: Carnation</h3>
+<!-- added fact about PI BETA PHI-->
+<p> Is the official flower of Pi Beta Phi</p>
     <img src="carnation.jpeg">
-
-
-
-<footer> Numebr 9: orchid
-
-
-
-
-
+<h3> Numebr 9: orchid</h3>
       <img src="orchid drawing.png">
 
-
-
-
-
-<footer> Number 10: Salvia
+<h4> Number 10: Salvia</h4>
   <img src="salvia.png">
 
-
-
-
-    </article>
   </section>
   <footer>
-      Copyright 2020 by Domnick Miyeng
+   <p>&copy;2020 by Domnick Miyeng</p>
   </footer>
 </body>
 </html>
