--- a/seeds.html
+++ b/seeds.html
@@ -1,15 +1,14 @@
-<!--Caroline Oberg-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <title>Gardening Seeds</title>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<header>
-		<!-- Nav section -->
-      <nav>
-        <ul>
+  <header>
+    <nav>
+      <ul>
           <li>
             <a href="index.html">Home Page</a>
           </li>
@@ -17,16 +16,21 @@
           <li>
             <a href="about.html">About</a>
           </li>
-
           <li>
             <a href="tools.html">Tools</a>
           </li>
           <li>
             <a href="seeds.html">Seeds</a>
-          </li>          
-        </ul>
-      </nav>
-		<h1>Simpson Garden Center</h1>
+          </li>  
+          <li>
+          <a href="Tips_Tricks.html">Tips & Tricks</a>
+          </li>
+          <li>
+          <a href="Top_10_plants.html">Top 10 plants for the garden</a>
+           </li>
+      </ul>
+    </nav>
+  <h1>Simpson Garden Center</h1>
 	</header>
 
 <h1>Seeds</h1>
@@ -37,7 +41,7 @@
 <img src="seeds.png">
 <p>We have all kinds of seeds in store ranging from every kind of vegetable, herb, or flower.</p>
 <footer>
-	Copyright 2020 by Caroline Oberg
+	<p>&copy;2020 by Domnick Miyeng</p>
 </footer>
 </body>
 </html>
