--- a/tips_tricks.html
+++ b/tips_tricks.html
@@ -3,81 +3,72 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Tips & Tricks</title>
+   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+<!--I can not figure out how to get the class to work, but I coded it like I thought I was suposed to-->
+<style>
+   .even {
+    font:19px
+}
+.odd {
+   text-shadow: right; font-size: 22px; 
+}
+</style>
 </head>
 
 <body>
   <header>
     <nav>
       <ul>
-        <li>
-          <a href="index.html">Home Page</a>
-        </li>
+            <li>
+            <a href="index.html">Home Page</a>
+          </li>
 
-        <li>
-          <a href="about.html">About</a>
-        </li>
-
-          <a href="Top 10 plants for the garden.html">Top 10 for the garden</a>
-        </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="tools.html">Tools</a>
+          </li>
+          <li>
+            <a href="seeds.html">Seeds</a>
+          </li>  
+          <li>
+          <a href="Tips_Tricks.html">Tips & Tricks</a>
+          </li> 
+          <li>
+          <a href="Top_10_plants.html">Top 10 plants for the garden</a>
+           </li>
       </ul>
     </nav>
   </header>
-  <!-- Instead of section and article, many developers use the div tag. -->
+
+
+  
   <section>
     <h1>Tips & Tricks </h1>
 
 
-    <p> Welcome to the Tips & Tricks tab!! Here we will show you all the tips and all the tricks to get that gaden growing and looking good.
-<p> Tip number 1 
-  <p> if you like to grow tomato and you want to begin growing them, the easiset way to grow these tomatos are to put them in a contanier or pot. 
-
-
-
+    <p>Welcome to the Tips & Tricks tab!! Here we will show you all the tips and all the tricks to get that gaden growing and looking good.</p>
+    <p class="odd">Tip number 1:</p>
+    <p class="even">If you like to grow tomato and you want to begin growing them, the easiset way to grow these tomatos are to put them in a contanier or pot.</p>
     <img src="tomatoplant.jpeg">
 
-
-
-
-    <p>Tip number 2
-      <p> One trick i like to use is turning a plastic milk jug into a watering jug. i find this very useful and it works just like an actul watering container 
+    <p class="odd">Tip number 2</p>
+      <p class="even">One trick I like to use is turning a plastic milk jug into a watering jug. I find this very useful and it works just like an actul watering container</p>
       <p> 
-
-
-
-
         <img src="Milkjug.jpeg">
-
-
-
-      <p> Tip number 3
-        <p> Bottle gardening can be very useful for when you have had a long day and and very tired. This bottle gardening technique does self-watering by letting the plant hang by a sting in the bottle and getting water by itself.
-
-
-
-
+      <p class="odd">Tip number 3</p>
+        <p class="even">Bottle gardening can be very useful for when you have had a long day and and very tired. This bottle gardening technique does self-watering by letting the plant hang by a sting in the bottle and getting water by itself.</p>
     <img src="bottlegarden.jpg">
 
-
-
-
-    <p> Tip number 4
-      <p> this is the final tip and it is to use coffee grounds. this works just like a fertilizer becasue it adds nutients and makes texture and drainage better for the soil. Its very great! 
-
-
+    <p class="odd">Tip number 4</p>
+      <p class="even">This is the final tip and it is to use coffee grounds. This works just like a fertilizer becasue it adds nutients and makes texture and drainage better for the soil. It's very great!</p>
         <img src="coffee.jpeg">
-
-
-  </footer>
-</body>
-</html>"
-
-
-    </p>
-    </article>
   </section>
-  <footer>Copyright 2020 by Domnick Miyeng
+  <footer>
+    <p>&copy;2020 by Domnick Miyeng</p>
   </footer>
 </body>
 </html>
