work on CSS project

--- a/tools.html
+++ b/tools.html
@@ -42,7 +42,7 @@
     <P>Call our store for more information as to what is in stock. </p>
 <img src="gardentools.png">
 <footer>
-<p>&copy;2020 by Domnick Miyeng</p>
+	Copyright 2020 by Caroline Oberg
 </footer>
 </body>
 </html>
